; ModuleID = '/home/carl/AnghaBench/openssl/test/testutil/extr_driver.c_add_test.c'
source_filename = "/home/carl/AnghaBench/openssl/test/testutil/extr_driver.c_add_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32 (...)*, i32 }

@num_tests = common dso_local global i64 0, align 8
@all_tests = common dso_local global %struct.TYPE_3__* null, align 8
@num_test_cases = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_test(i8* %0, i32 ()* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32 ()*, align 8
  store i8* %0, i8** %3, align 8
  store i32 ()* %1, i32 ()** %4, align 8
  %5 = load i64, i64* @num_tests, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** @all_tests, align 8
  %7 = call i64 @OSSL_NELEM(%struct.TYPE_3__* %6)
  %8 = icmp ne i64 %5, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load i8*, i8** %3, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @all_tests, align 8
  %13 = load i64, i64* @num_tests, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  store i8* %11, i8** %15, align 8
  %16 = load i32 ()*, i32 ()** %4, align 8
  %17 = bitcast i32 ()* %16 to i32 (...)*
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** @all_tests, align 8
  %19 = load i64, i64* @num_tests, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 1
  store i32 (...)* %17, i32 (...)** %21, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** @all_tests, align 8
  %23 = load i64, i64* @num_tests, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 2
  store i32 -1, i32* %25, align 8
  %26 = load i64, i64* @num_tests, align 8
  %27 = add i64 %26, 1
  store i64 %27, i64* @num_tests, align 8
  %28 = load i32, i32* @num_test_cases, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* @num_test_cases, align 4
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @OSSL_NELEM(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
